<resources>
    <string name="app_name">JointPlanning</string>
    <string name="ready">Готов</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выйти</string>
    <string name="info">Инфо</string>
    <string name="about_text">Данная программа предназначена для
    ведения совместного планирования и оценивания задач по гибкой методологии Scrum</string>
    <string name="nickname">Никнейм: </string>
    <string name="enter_nickname">Введите ваш никнейм</string>
    <string name="theme">Тема</string>
    <string name="shirtcard">Рубашка карты</string>
    <string name="im_ready">Я готов!</string>
    <string name="do_estimate">Оценить</string>
    <string name="show_similar">Похожие задачи</string>
    <string name="priority">Приоритет: </string>
    <string name="time_left">Осталось времени: </string>
    <string name="result">Результат: </string>
    <string name="min_estimate">Минимальная  оценка:</string>
    <string name="max_estimate">Максимальная оценка:</string>
    <string name="estimate">Оценка:</string>
    <string name="detailed_description_task"> Требуется разработать приложение для оценки и планирования задач на команду.РолиИгроки – сотрудники, выполняющие оценку заданий.Ведущий – сотрудник, руководящий процессом оценки.Игрок должен
        видеть и оценивать текущее задание, которое рассматривает руководитель;
        просматривать похожие задания для точности оценки;
        видеть итоговый результат оценки.
        Ведущий должен: видеть текущие оцениваемые задачи;
         видеть текущую скорость команды. </string>
    <string name="task_description">Описание задачи</string>
    <string name="are_you_ready">Вы готовы?</string>
    <string name="yes">Да, я готов!</string>
    <string name="no">Нет</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="your_estimate">Ваша оценка:</string>
    <string name="your_nickname">Ваш Никнейм:</string>
    <string name="authorization">Авторизация</string>
    <string name="user">Пользователь:</string>
    <string name="input_ur_nickname">введите никнейм</string>
    <string name="input_password">введите пароль</string>
    <string name="password">Пароль:</string>
    <string name="sign_in">Войти</string>
    <string name="versionShort">Версия: %s</string>
    <string name="serverNotAvailable">Сервер не доступен</string>
    <string name="versionToast">Версия приложения %s.%s от %s - %s.</string>
    <string name="alphaText">альфа версия</string>
    <string name="betaText">бета версия</string>
    <string name="releaseCandidateText">выпуск-кандидат</string>
    <string name="productionText">публичный выпуск</string>
    <string name="confirmExit">Вы уверены что хотите выйти?</string>
    <string name="signOutMessage">Нажмите повторно для выхода из приложения.</string>
    <string name="task_was_created">Задача создана:</string>
    <string name="task_was_estimated">Задача оценена:</string>
    <string name="author">Автор:</string>
    <string name="custom_settings">Пользовательские настройки</string>

    <string-array name="themes">
        <item>Тёмная тема</item>
        <item>Светлая тема</item>
        <item>Розовая тема</item>
        <item>Синяя тема</item>
        <item>Зелёная тема</item>
    </string-array>

    <string name="OK">OK</string>
    <string name="def_theme">Тёмная тема</string>
    <string name="theme_summary">Внешний вид приложения</string>
    <string name="theme_dialog_title">Тема</string>

    <string-array name="shirts">
        <item>Красная рубашка</item>
        <item>Синяя рубашка</item>
        <item>Зелёная рубашка</item>
        <item>Чёрная рубашка</item>
    </string-array>

    <string name="def_shirt">Красная рубашка</string>
    <string name="shirts_dialog_title">Рубашка</string>
    <string name="shirts_summary">Цвет рубашки карт</string>

    <string-array name="sequenceRead">
        <item><font size="20">Стандартная</font><font size="10">\n(0, 1, 2, 3, 5, 8, 13, 20, …100)</font></item>
        <item><font size="20">Фибоначчи</font><font size="10">\n(0, 1, 2, 3, 5, 8, 13, 21, …987)</font></item>
        <item><font size="20">Натуральная</font><font size="10">\n(0, 1, 2, 3, 4, 5, 6, 7, …15)</font></item>
        <item><font size="20">Часовая</font><font size="10">\n(0, 1, 2, 4, 6, 8, 16, 24, 32, 40)</font></item>
    </string-array>

    <string-array name="sequence">
        <item>Стандартная</item>
        <item>Фибоначчи</item>
        <item>Натуральная</item>
        <item>Часовая</item>
    </string-array>

    <string name="def_sequence">Стандартная</string>
    <string name="sequence_dialog_title">Последовательность</string>
    <string name="sequence_summary">Числовая последовательность, отображаемая на картах</string>
</resources>
