<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.preference.ListPreference
        android:defaultValue="@string/def_theme"
        android:entries="@array/themes"
        android:entryValues="@array/themes"
        android:key="theme"
        android:title="@string/theme_dialog_title"
        android:summary="@string/theme_summary"
        android:dialogTitle="@string/theme_dialog_title"/>

    <androidx.preference.ListPreference
        android:defaultValue="@string/def_shirt"
        android:entries="@array/shirts"
        android:entryValues="@array/shirts"
        android:key="shirts"
        android:title="@string/shirts_dialog_title"
        android:summary="@string/shirts_summary"
        android:dialogTitle="@string/shirts_dialog_title"/>

    <androidx.preference.ListPreference
        android:defaultValue="@string/def_sequence"
        android:entries="@array/sequenceRead"
        android:entryValues="@array/sequence"
        android:key="sequence"
        android:title="@string/sequence_dialog_title"
        android:summary="@string/sequence_summary"
        android:dialogTitle="@string/sequence_dialog_title"/>

</androidx.preference.PreferenceScreen>