<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        style="?android:listSeparatorTextViewStyle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center"
        android:text="8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_estimate"/>

        <TextView
            android:id="@+id/min_estimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_estimate"/>

        <TextView
            android:id="@+id/max_estimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13" />
    </LinearLayout>

</LinearLayout>