<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/similar_tasks"
        android:layout_width="140dp"
        android:layout_height="69dp"
        android:text="@string/show_similar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task"
        android:layout_width="408dp"
        android:layout_height="413dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/similar_tasks"
        tools:text="Текст текущей задачи"
        android:text="Текст текущей задачи"/>

    <Button
        android:id="@+id/im_ready"
        android:layout_width="76dp"
        android:layout_height="66dp"
        android:layout_marginBottom="8dp"
        android:text="@string/im_ready"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/priority"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/priority"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toEndOf="@+id/im_ready" />

    <TextView
        android:id="@+id/priority"
        android:layout_width="74dp"
        android:layout_height="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.25"
        tools:text="1" />


</androidx.constraintlayout.widget.ConstraintLayout>